# statevectorsim

./: LICENSE  README.md  pyproject.toml
benchmark/: benchmark.ipynb  benchmark.py
examples/: monte-carlo-bell.ipynb
src/statevectorsim/: __init__.py  quantum_backend.py  quantum_circuit.py  quantum_gate.py  quantum_noise.py  quantum_state.py  test_suite.py  utils.py
test/: test.ipynb
tests/: circuit-tests.ipynb  gate-tests.ipynb  optimiser-tests.ipynb  test_suite.py
